Bug 1851871 - Notify the front end when headers are ready, and try to update the display then. r=BenC,aleca,freaktechnik

This is a little bit of a hack, but it should appear to perform much better.

Once `nsMimeHtmlEmitter` has set the message header data on the `nsIMailChannel`, it causes an
`onStatusChange` event to fire, and the front end responds by displaying the headers.

To avoid confusion when the headers update and the message doesn't (which annoyingly won't happen
until the whole message is ready), on STATE_START the previous message is cleared from the display.

Differential Revision: https://phabricator.services.mozilla.com/D188535

--HG--
extra : amend_source : 704adcfcbf62e70b6495bd3046abc70d8303e988