mail/test/browser/message-reader/browser_detectCharset.js
@@ -68,8 +68,6 @@ async function extract_eml_body_textcontent(eml, autodetect = true) {
     );
     await hiddenPromise;
     await reloadPromise;
-
-    await new Promise(resolve => setTimeout(resolve));
   }
 
   let textContent =
